@startuml
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam classAttributeIconSize 0

package "API Layer" #LightBlue {
    class HttpServer {
        -TcpListener _server
        +Start()
    }

    class RequestProcessor {
        +ProcessRequest(clientObj: object)
        -ParseHeaders(reader: StreamReader) : Dictionary<string, string>
        -ReadBody(reader: StreamReader, headers: Dictionary<string, string>) : string
    }

    class Router {
        -UserHandler _userHandler
        +RouteRequest(requestLine: string, headers: Dictionary<string, string>, body: string) : Response
    }

    class ResponseBuilder {
        +{static} SendResponse(writer: StreamWriter, response: Response)
        -{static} GetStatusDescription(statusCode: int) : string
    }

    class UserHandler {
        +RegisterUser(request: Request) : Response
        +LoginUser(request: Request) : Response
    }

    class Request {
        +string Method
        +string Path
        +string? Body
    }

    class Response {
        +int StatusCode
        +string Content
        +string ContentType
    }
}

HttpServer --> RequestProcessor
RequestProcessor --> Router
Router --> UserHandler
UserHandler ..> Request
UserHandler ..> Response
Router ..> Request
Router ..> Response
ResponseBuilder ..> Response

note "Connection to Business Layer (1)" as N1
@enduml